# simba

./: .gitignore  Cargo.toml  LICENSE  NEWS  README.md  justfile  plot.py  plot_statistics.py  rust-toolchain.toml  serve-wasm
.github/workflows/: ci.yml
cow-tree/: Cargo.toml
cow-tree/src/: lib.rs  node.rs
native-gui/: Cargo.toml
native-gui/src/: main.rs
simba/: Cargo.toml
simba-cmd/: Cargo.toml
simba-cmd/src/: main.rs
simba/src/: clients.rs  config.rs  events.rs  failures.rs  lib.rs  library.rs  link.rs  message.rs  metrics.rs  node.rs  object.rs  runners.rs  scene.rs  simulation.rs  stats.rs
simba/src/ledger/: conventional.rs  mod.rs
simba/src/ledger/nakamoto/: block.rs  mod.rs  tests.rs
simba/src/logic/: mod.rs  speed_test.rs
simba/src/logic/gossip/: mod.rs  node.rs
simba/src/logic/nakamoto/: block_generator.rs  mod.rs  node.rs
simba/src/logic/pbft/: mod.rs  node.rs
simba/src/logic/snowball/: mod.rs  node.rs
static/: index.html
visualizer/: Cargo.toml  validate-shaders.sh
visualizer/shaders/: circle.wgsl  line.wgsl  rectangle.wgsl
visualizer/src/: lib.rs  window_loop.rs
visualizer/src/graphics/: camera.rs  circle.rs  data.rs  drawable.rs  line.rs  mod.rs  rectangle.rs  render_loop.rs
visualizer/src/graphics/renderer/: mod.rs  program.rs
visualizer/src/scene/: block.rs  block_connection.rs  link.rs  mod.rs  node.rs  scenes.rs
visualizer/src/ui/: logic.rs  mod.rs  render_loop.rs  statistics.rs
web-gui/: Cargo.toml
web-gui/src/: lib.rs
