[workspace]
resolver = "2"
members = [
    "simba",
    "simba-cmd",
    "visualizer",
    "native-gui",
    "cow-tree",
#    "web-gui",
]

[workspace.dependencies]
asim = { git="http://github.com/kaimast/asim.git" }
log = "0.4"
rand = "0.9"
getrandom = "0.3"
ron = "0.8"
console-subscriber = "0.4"
dashmap = "6"
#winit = "0.30"
winit = { git = "https://github.com/iced-rs/winit.git", rev="254d6b3420ce4e674f516f7a2bd440665e05484d" }
wgpu = { version="23", features=["spirv"] }
iced_aw = { version="0.11", default-features=false }
#iced = "0.13"
#iced_runtime = "0.13"
#iced_renderer = "0.13"
#iced_winit = "0.13"
#iced_core = "0.13"
#iced_wgpu = "0.13"
iced = { git="https://github.com/iced-rs/iced.git", default-features=false }
iced_runtime = { git="https://github.com/iced-rs/iced.git", default-features=false}
iced_renderer = { git="https://github.com/iced-rs/iced.git", default-features=false }
iced_widget = { git="https://github.com/iced-rs/iced.git"}
iced_winit = { git="https://github.com/iced-rs/iced.git"}
iced_core = { git="https://github.com/iced-rs/iced.git", default-features=false }
iced_wgpu = { git="https://github.com/iced-rs/iced.git"}


[profile.release]
opt-level = 3
debug = true

[profile.dev.build-override]
opt-level = 3

[patch.crates-io]
iced = { git="https://github.com/iced-rs/iced.git"}
iced_runtime = { git="https://github.com/iced-rs/iced.git"}
iced_renderer = { git="https://github.com/iced-rs/iced.git"}
iced_widget = { git="https://github.com/iced-rs/iced.git"}
iced_winit = { git="https://github.com/iced-rs/iced.git"}
iced_core = { git="https://github.com/iced-rs/iced.git"}
iced_wgpu = { git="https://github.com/iced-rs/iced.git"}
winit = { git = "https://github.com/iced-rs/winit.git", rev="254d6b3420ce4e674f516f7a2bd440665e05484d" }
