[package]
name = "simba-cmd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "simba"
path = "src/main.rs"

[dependencies]
env_logger = "0.11"
log = "0.4"
anyhow = "1"
tracing-subscriber = { version="0.3", features=["env-filter", "std"] }
tracing-flame = "0.2"
cpuprofiler = { version="0.0", optional=true }
simba = { path="../simba", features=["runners"] }
serde = { version="1", features=["derive"] }
clap = { version="4", default-features=false, features=["std", "suggestions", "help", "color", "cargo", "derive"] }
ron = "0.8"
tokio = { version="1", features=["sync", "time"], default-features=false }
