[package]
name = "simba-visualizer"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Simulating Byzantine Fault-Tolerant Applications"

[dependencies]
simba = { path="../simba" }
parking_lot = "0.12"
log = "0.4"
cfg-if = "1"
dashmap = { workspace=true } 
derive_more = "1.0.0-beta.6"
glam = { version="0.29", features=["bytemuck"] }
#iced_aw = { workspace=true, features=["card"] }
iced =  { workspace=true, features=["tokio"] }
iced_runtime = { workspace=true }
iced_renderer = { workspace=true, features=["wgpu", "fira-sans"] }
iced_winit = { workspace=true }
iced_core = { workspace=true }
iced_wgpu = { workspace=true }
tokio = { version="1", features=["sync"], default-features=false }
bytemuck = { version="1", features=["derive"] }
futures = { version="0.3" }
async-trait = "0.1"
anyhow = "1"
tracing = "0.1"
winit = { workspace=true }
wgpu = { workspace=true }
instant = "0.1"
enum-map = "2"

[features]
default = []
wasm = ["instant/wasm-bindgen"]
